# TattvaQuant-Engine

./: .coverage  .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.hypothesis/constants/: 0731cebb7d63eb10  0939f0b28e7723e3  0c9d1725bcc68733  1197b99a0166c3ff  19835b473727237e  198f752f931024d3  1b414bbc96aeae32  1bbe12bfc5e6a14c  27af28e43ac68bcd  2ea0b44a3d63af05  352de2b8621650b4  40075034206f54a4  45922cc0b50ec2ff  48b1d5cfa849d2ca  4912aa023e0c95a8  4d5a8f78f26d2343  4f2b50761862e0af  50349e72e971b3e4  524f6d01c1468e0a  5617522dd0687744  5c2b59e1fce65877  68c1a71aaa9be3c8  68c7b2738076812e  6bca6c816cc83e1a  6cd9e860a3685f9f  6dfd176c919a6445  7216169733ef9423  76cffedae1ba7070  770bf84d90f0befc  7d7f8ec95edad1ec  7dfaab444565d223  816cbaa5fe495d46  894d382d70f4c773  8c186b981bc60054  8efa0a35517d557f  9899024f381f44df  99c13a50a274b3b1  9d09c49640f85a28  a032ec5a25e4bf98  ac52d98e6b45f9a1  (+18 more)
airflow/dags/: investing_pipeline.py
app/: __init__.py  config.py  main.py
app/agents/: __init__.py  client.py  email_agent.py  feedback_agent.py  prompts.py  resume_agent.py  voice_agent.py
app/database/: __init__.py  session.py
app/graph/: __init__.py  nodes.py  state.py  workflow.py
app/middleware/: rate_limit.py  request_context.py
app/models/: __init__.py  candidate.py  common.py  company.py  embedding.py  feedback.py  hr_decision.py  interview.py  job.py  resume.py  score.py  user.py  workflow_state.py
app/routes/: analytics.py  auth.py  candidates.py  dashboard.py  interviews.py  ui.py  webhooks.py
app/schemas/: __init__.py  auth.py  candidate.py  dashboard.py  interview.py
app/services/: analytics_service.py  auth.py  calendar_service.py  candidate_service.py  email_service.py  embedding_service.py  scoring_service.py  voice_service.py  workflow_service.py
app/templates/: analytics.html  base.html  candidate_detail.html  dashboard.html  decisions.html  login.html  status.html  upload.html
app/utils/: logging.py  security.py
app/workers/: celery_app.py  tasks.py
config/: feature_registry.yaml
configs/: api.yaml  build_sequence.yaml  event_model.yaml  execution.yaml  feedback.yaml  fusion.yaml  logging.yaml  market_model.yaml  rl.yaml  uncertainty.yaml
docker/: Dockerfile  docker-compose.yml
institutional_ai_investing_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
investing_engine/: __init__.py  cli.py  config.py  models.py
investing_engine/data/: __init__.py  events.py  ingestion.py  providers.py  timegate.py
investing_engine/execution/: __init__.py  broker.py  costs.py
investing_engine/features/: __init__.py  store.py
investing_engine/feedback/: __init__.py  loop.py
investing_engine/fusion/: __init__.py  engine.py  regime.py
investing_engine/intelligence/: __init__.py  market.py  parallel.py  tabular.py  text.py
investing_engine/pipeline/: __init__.py  engine.py
investing_engine/rl/: __init__.py  decision.py  env.py  reward.py
investing_engine/uncertainty/: __init__.py  engine.py
mlflow/: README.md
mlruns/0/: meta.yaml
notebooks/: README.md
scripts/: run_prototype.py  seed_demo.py
src/: __init__.py
src/api/: app.py  logging.py
src/data/: __init__.py  events.py  ingestion.py  timegate.py
src/execution/: __init__.py  cost_model.py  execution_engine.py
src/features/: __init__.py  feature_store.py
src/feedback/: __init__.py  feedback_loop.py  metrics.py
src/fusion/: __init__.py  fusion_engine.py  regime_classifier.py
src/models/: __init__.py  event_model.py  fund_model.py  fundamental_model.py  market_model.py  market_model_fallback.py  parallel.py
src/project/: __init__.py  build_sequence.py
src/rl/: __init__.py  agent.py  environment.py  reward.py
src/uncertainty/: __init__.py  shift_detector.py  uncertainty_engine.py
tests/: conftest.py  test_build_sequence.py  test_constraints.py  test_event_model.py  test_execution_engine.py  test_feature_store.py  test_feedback_loop.py  test_fundamental_model.py  test_fundamental_provider.py  test_fusion_engine.py  test_fusion_phase5.py  test_market_model.py  test_models_layer.py  test_phase6.py  test_phase7.py  test_project_structure.py  test_rl_engine.py  test_timegate.py  test_uncertainty_engine.py
(+1273 files in other folders)
