[build-system]
requires = ["setuptools>=75.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "institutional-ai-investing-engine"
version = "0.1.0"
description = "Institution-grade quant + AI hybrid investing engine prototype."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Codex" }]
dependencies = [
  "fastapi==0.115.5",
  "pydantic==2.10.3",
  "structlog==24.4.0",
  "uvicorn==0.32.0",
]

[project.optional-dependencies]
dev = [
  "black==24.10.0",
  "pytest>=8.3.4",
  "pytest-cov==6.0.0",
  "ruff==0.7.4",
  "hypothesis==6.123.1",
]
ml = [
  "torch>=2.6.0",
  "transformers==4.46.3",
  "xgboost==2.1.3",
  "lightgbm==4.5.0",
  "stable-baselines3==2.4.0",
  "gymnasium==1.0.0",
  "scikit-learn==1.5.2",
]
data = [
  "pandas==2.2.3",
  "polars==1.14.0",
  "pyarrow>=4.0.0,<18",
  "redis==5.2.0",
  "SQLAlchemy==2.0.36",
  "psycopg[binary]==3.2.3",
  "kafka-python==2.0.2",
  "yfinance==0.2.54",
]
infra = [
  "mlflow==2.17.2",
  "prometheus-client==0.21.0",
]

[project.scripts]
investing-engine = "investing_engine.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "investing_engine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=src --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
fail_under = 0
show_missing = true